# choose-from

./: Cargo.toml  LICENSE  README.md
src/: arr.rs  choice.rs  fixed.rs  lib.rs  selector.rs  vec.rs
